--- a/exercicios/022/fundo005.html
+++ b/exercicios/022/fundo005.html
@@ -8,16 +8,24 @@
     <style>
         body {
             height: 99vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
-            background-size: cover
+            background-attachment: fixed; */
+
+            /* 
+                color > image > position > repeat > size 
+                > attachment
+            */
+
+            background: black url(imagens/wallpaper002.jpg)
+            center center/cover no-repeat fixed;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             margin: auto;
             padding: 10px;
             border: 1px solid black;
