--- a/exercicios/020/index.html
+++ b/exercicios/020/index.html
@@ -22,6 +22,16 @@
 <body>
     <div id="d1">01</div>
     <div id="d2">20</div>
-    <div id="d3">03</div>
+    <div id="d3">03</div> <br>
+    <p>lorem asdasdasdasd</p>
+    <label for="favcolor">Selecione sua cor: </label>
+    <input type="color" name="favcolor" id="favcolor">
+    <br>
+    <input type="langs" name="lang" id="lang">
+        <datalist id="langs">
+            <option value="Java">Java</option>
+            <option value="python">python</option>
+        </datalist>
+    <br>
 </body>
 </html>
