--- a/exercicios/ex23/tabela01.html
+++ b/exercicios/ex23/tabela01.html
@@ -8,6 +8,7 @@
     <style>
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
 
@@ -22,6 +23,8 @@
         td {
             border: 1px solid black;
             padding: 6px;
+            text-align: center;
+            vertical-align: middle;
         }
     </style>
 </head>
