continuação da tabela

--- a/exercicios/ex23/tabela02.html
+++ b/exercicios/ex23/tabela02.html
@@ -33,6 +33,7 @@
 <body>
     <h1>Tabelas grandes</h1>
     <table>
+        <caption>População dos estados</caption>
         <thead>
             <tr>
                 <th>Estado</th>
